--- a/index.html
+++ b/index.html
@@ -20,11 +20,23 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css"
+    />
     <link rel="stylesheet" href="assets/css/magic.min.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
   <body style="font-family: Inconsolata, monospace; height: 100%">
+    <a
+      class="github-fork-ribbon right-top"
+      href="http://github.com/IhsanDevs/HackTheDay"
+      data-ribbon="Fork me on GitHub"
+      title="Fork me on GitHub"
+      >Fork me on GitHub</a
+    >
+
     <nav class="navbar navbar-light navbar-expand-md bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" style="font-weight: bold"
@@ -58,6 +70,7 @@
         </div>
       </div>
     </nav>
+
     <div class="container-fluid" style="height: 100%">
       <div
         class="row"
